Upgrading modernizer-maven-plugin